# fastApi-ElAngulo

./: LICENSE  fastapi.sql  main.py  pyproject.toml
src/: routes.py
src/apis/: users.py
src/utils/: sql.py
