[tool.poetry]
name = "fastApi El Angulo"
version = "0.1.0"
description = "A simple API CRUD with sql"
authors = ["Sopadefideos"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.77.1"
uvicorn = "^0.17.6"
autopep8 = "^1.6.0"
mysql = "^0.0.3"
mysql-connector = "^2.2.9"

[tool.poetry.dev-dependencies]
fastapi = "^0.77.1"
uvicorn = "^0.17.6"
autopep8 = "^1.6.0"
mysql = "^0.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
